--- a/app/views/importer/match.html.erb
+++ b/app/views/importer/match.html.erb
@@ -15,7 +15,7 @@
 	<fieldset class="box"><legend><%= l(:label_match_select) %></legend>
 	<% @headers.each do |column| %>
 		 <label class="tabular"><%= column %>:
-		 <%= select_tag "fields_map[#{column}]", "<option value=\"\">#{l(:option_ignore)}</option>" + options_for_select( @attrs ) %></label>
+		 <%= select_tag "fields_map[#{column}]", "<option value=\"\">#{l(:option_ignore)}</option>" + options_for_select( @attrs, @fields_map[column] ) %></label>
 	<% end %>
 	</fieldset>
 	
